# python-aiotomato

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fetch_devices.py  pyproject.toml
.github/workflows/: main.yml  publish.yml
aiotomato/: client.py
tests/: test_client.py
tests/fixtures/: DEVLIST.txt
