[tool.poetry]
name = "aiotomato"
version = "0.1.0"
description = "API wrapper for Tomato"
authors = ["Malachi Soord <inverse.chi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-socket = "^0.5.0"
responses = "^0.16.0"
pre-commit = "^2.16.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
